--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,18 +6,21 @@ android {
 
     defaultConfig {
         applicationId "com.example.android.sunshine.app"
-        minSdkVersion 10
+        minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
-    buildTypes {
+    buildTypes {a
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-}
+    buildTypes.each {
+        /*api키가 string값으로 들어갈때 \를 사용해줘야 하는듯 하다*/
+        it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', "\"f7fe6d79bfc2c54a90d229f0ddf393ee\""
+    }}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
